# django-robotice-auth

./: .gitignore  ChangeLog  LICENSE.rst  README.rst  requirements.txt  setup.cfg
robotice_auth/: __init__.py  backend.py  exceptions.py  forms.py  requirements.txt  urls.py  user.py  utils.py  views.py
