[metadata]
name = django_robotice_auth 
summary = Django authentication backend for use with Robotice Control Identity
description-file =
    README.rst
author = Michael Kuty & Ales Komarek
author-email = mail@majklk.cz & Ales Komarek
home-page = https://github.com/robotice/django_robotice_auth
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    robotice_auth

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1